# mcpgate

./: .gitignore  Cargo.toml  Cross.toml  LICENSE-MIT  README.md  README_zh_CN.md  justfile
.github/actions/setup/: action.yml
.github/workflows/: build.yml
src/: config.rs  error.rs  gate.rs  main.rs  orphan.rs  serde.rs
